--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <H1>반갑습니다. 여기는 유시은의 홈페이지입니다.</H1>
 <H2>즐거운 시간 보내세요~</H2>
 <a href="https://uncheon.hs.kr/">운천고등학교</a><br>
-<a href="https://seoultech.ac.kr/">서울과학기술대</a><br>
+<a href="https://seoultech.ac.kr/">서울과학기술대학교</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
