--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <H2>즐거운 시간 보내세요~</H2>
 <a href="https://uncheon.hs.kr/">운천고등학교</a><br>
 <a href="https://seoultech.ac.kr/">서울과학기술대학교</a><br>
-<a href="my.html">나의 웹</a>
+<a href="my.html">내 소개</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
