--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <a href="https://uncheon.hs.kr/">운천고등학교</a><br>
 <a href="https://seoultech.ac.kr/">서울과학기술대학교</a><br>
 <a href="my.html">내 소개</a><br>
+<a href="sum.html">합 구하기</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
