--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href="https://seoultech.ac.kr/">서울과학기술대학교</a><br>
 <a href="my.html">내 소개</a><br>
 <a href="sum.html">합 구하기</a><br>
-<a href="add.html">총합 </a><br>
+<a href="add.html">총합 구하기</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
