--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <a href="my.html">내 소개</a><br>
 <a href="sum.html">합 구하기</a><br>
 <a href="add.html">총합 구하기</a><br>
-<a href="data.html">데이터 처리</a><br>
+<a href="data.html">입력 데이터 합 구하기</a><br>
+<a href="randata.html">랜덤 데이터 합 구하기</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
