--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="add.html">총합 구하기</a><br>
 <a href="data.html">입력 데이터 합 구하기</a><br>
 <a href="randata.html">랜덤 데이터 합 구하기</a><br>
+<a href="numgame.html">숫자 맞추기 게임</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
