--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a href="data.html">입력 데이터 합 구하기</a><br>
 <a href="randata.html">랜덤 데이터 합 구하기</a><br>
 <a href="numgame.html">숫자 맞추기 게임</a><br>
+<a href="cardgame-8.html">카드 게임</a><br>
 <a href="joy.html">휴식공간</a>
 </BODY>
 </HTML>
